# Backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
config/: .secrets.toml  settings.json  settings.toml
config/model_config/: model-settings.json
devops/: Dockerfile  api.Dockerfile  deps.Dockerfile  docker-compose.yml  minio.Dockerfile
sql_scripts/: create_tables.sql  poblate.sql  reset.sql
src/app/: database.py  main.py
src/app/ai/: model_ml.py
src/app/config/: config.py
src/app/crud/: activity.py  base.py  challenge_match.py  comment.py  post.py  project.py  project_tag.py  tag.py  team.py  user.py  user_tag.py
src/app/models/: ImageResponse.py  activity.py  challenge_match.py  comment.py  post.py  prediction_response.py  project.py  project_tag.py  tag.py  team.py  team_member.py  user.py  user_tag.py
src/app/routers/: activity.py  challenge_match.py  check_activity.py  comment.py  country.py  generate_names.py  image_retrieval.py  model.py  post.py  project.py  project_tag.py  tag.py  team.py  user_tag.py  users.py
src/app/schemas/: base.py  challenge.py  namegeneration.py
src/app/services/: generate_name.py
src/app/utils/: api_utils.py  db_utils.py  image_utils.py  minio_utils.py
src/backend/: main.py
src/backend/config/: config.py
src/backend/server/: api.py
src/backend/utils/: minio_utils.py
